# serializer version: 1
# name: test_sensors[filter][sensor.filter_battery-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.filter_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.BATTERY: 'battery'>,
    'original_icon': None,
    'original_name': 'Battery',
    'platform': 'drop_connect',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'DROP-1_C0FFEE_4_battery',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensors[filter][sensor.filter_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery',
      'friendly_name': 'Filter Battery',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.filter_battery',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '12',
  })
# ---
# name: test_sensors[filter][sensor.filter_current_water_pressure-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.filter_current_water_pressure',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfPressure.KPA: 'kPa'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.PRESSURE: 'pressure'>,
    'original_icon': None,
    'original_name': 'Current water pressure',
    'platform': 'drop_connect',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'current_system_pressure',
    'unique_id': 'DROP-1_C0FFEE_4_current_system_pressure',
    'unit_of_measurement': <UnitOfPressure.KPA: 'kPa'>,
  })
# ---
# name: test_sensors[filter][sensor.filter_current_water_pressure-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'pressure',
      'friendly_name': 'Filter Current water pressure',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPressure.KPA: 'kPa'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.filter_current_water_pressure',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '263.3797174',
  })
# ---
# name: test_sensors[filter][sensor.filter_water_flow_rate-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.filter_water_flow_rate',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': None,
    'original_icon': 'mdi:shower-head',
    'original_name': 'Water flow rate',
    'platform': 'drop_connect',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'current_flow_rate',
    'unique_id': 'DROP-1_C0FFEE_4_current_flow_rate',
    'unit_of_measurement': 'gpm',
  })
# ---
# name: test_sensors[filter][sensor.filter_water_flow_rate-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Filter Water flow rate',
      'icon': 'mdi:shower-head',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'gpm',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.filter_water_flow_rate',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '19.84',
  })
# ---
# name: test_sensors[hub][sensor.hub_drop_1_c0ffee_average_daily_water_usage-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.hub_drop_1_c0ffee_average_daily_water_usage',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.WATER: 'water'>,
    'original_icon': None,
    'original_name': 'Average daily water usage',
    'platform': 'drop_connect',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'average_water_used',
    'unique_id': 'DROP-1_C0FFEE_255_average_water_used',
    'unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
  })
# ---
# name: test_sensors[hub][sensor.hub_drop_1_c0ffee_average_daily_water_usage-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'water',
      'friendly_name': 'Hub DROP-1_C0FFEE Average daily water usage',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hub_drop_1_c0ffee_average_daily_water_usage',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '287.691295584',
  })
# ---
# name: test_sensors[hub][sensor.hub_drop_1_c0ffee_battery-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hub_drop_1_c0ffee_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.BATTERY: 'battery'>,
    'original_icon': None,
    'original_name': 'Battery',
    'platform': 'drop_connect',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'DROP-1_C0FFEE_255_battery',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensors[hub][sensor.hub_drop_1_c0ffee_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery',
      'friendly_name': 'Hub DROP-1_C0FFEE Battery',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hub_drop_1_c0ffee_battery',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '50',
  })
# ---
# name: test_sensors[hub][sensor.hub_drop_1_c0ffee_current_water_pressure-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.hub_drop_1_c0ffee_current_water_pressure',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfPressure.KPA: 'kPa'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.PRESSURE: 'pressure'>,
    'original_icon': None,
    'original_name': 'Current water pressure',
    'platform': 'drop_connect',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'current_system_pressure',
    'unique_id': 'DROP-1_C0FFEE_255_current_system_pressure',
    'unit_of_measurement': <UnitOfPressure.KPA: 'kPa'>,
  })
# ---
# name: test_sensors[hub][sensor.hub_drop_1_c0ffee_current_water_pressure-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'pressure',
      'friendly_name': 'Hub DROP-1_C0FFEE Current water pressure',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPressure.KPA: 'kPa'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hub_drop_1_c0ffee_current_water_pressure',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '428.8538854',
  })
# ---
# name: test_sensors[hub][sensor.hub_drop_1_c0ffee_high_water_pressure_today-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.hub_drop_1_c0ffee_high_water_pressure_today',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfPressure.KPA: 'kPa'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.PRESSURE: 'pressure'>,
    'original_icon': None,
    'original_name': 'High water pressure today',
    'platform': 'drop_connect',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'high_system_pressure',
    'unique_id': 'DROP-1_C0FFEE_255_high_system_pressure',
    'unit_of_measurement': <UnitOfPressure.KPA: 'kPa'>,
  })
# ---
# name: test_sensors[hub][sensor.hub_drop_1_c0ffee_high_water_pressure_today-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'pressure',
      'friendly_name': 'Hub DROP-1_C0FFEE High water pressure today',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPressure.KPA: 'kPa'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hub_drop_1_c0ffee_high_water_pressure_today',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '427.474934',
  })
# ---
# name: test_sensors[hub][sensor.hub_drop_1_c0ffee_low_water_pressure_today-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.hub_drop_1_c0ffee_low_water_pressure_today',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfPressure.KPA: 'kPa'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.PRESSURE: 'pressure'>,
    'original_icon': None,
    'original_name': 'Low water pressure today',
    'platform': 'drop_connect',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'low_system_pressure',
    'unique_id': 'DROP-1_C0FFEE_255_low_system_pressure',
    'unit_of_measurement': <UnitOfPressure.KPA: 'kPa'>,
  })
# ---
# name: test_sensors[hub][sensor.hub_drop_1_c0ffee_low_water_pressure_today-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'pressure',
      'friendly_name': 'Hub DROP-1_C0FFEE Low water pressure today',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPressure.KPA: 'kPa'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hub_drop_1_c0ffee_low_water_pressure_today',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '420.580177',
  })
# ---
# name: test_sensors[hub][sensor.hub_drop_1_c0ffee_peak_water_flow_rate_today-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.hub_drop_1_c0ffee_peak_water_flow_rate_today',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': None,
    'original_icon': 'mdi:shower-head',
    'original_name': 'Peak water flow rate today',
    'platform': 'drop_connect',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'peak_flow_rate',
    'unique_id': 'DROP-1_C0FFEE_255_peak_flow_rate',
    'unit_of_measurement': 'gpm',
  })
# ---
# name: test_sensors[hub][sensor.hub_drop_1_c0ffee_peak_water_flow_rate_today-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Hub DROP-1_C0FFEE Peak water flow rate today',
      'icon': 'mdi:shower-head',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'gpm',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hub_drop_1_c0ffee_peak_water_flow_rate_today',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '13.8',
  })
# ---
# name: test_sensors[hub][sensor.hub_drop_1_c0ffee_total_water_used_today-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.hub_drop_1_c0ffee_total_water_used_today',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.WATER: 'water'>,
    'original_icon': None,
    'original_name': 'Total water used today',
    'platform': 'drop_connect',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'water_used_today',
    'unique_id': 'DROP-1_C0FFEE_255_water_used_today',
    'unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
  })
# ---
# name: test_sensors[hub][sensor.hub_drop_1_c0ffee_total_water_used_today-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'water',
      'friendly_name': 'Hub DROP-1_C0FFEE Total water used today',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hub_drop_1_c0ffee_total_water_used_today',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '881.13030096168',
  })
# ---
# name: test_sensors[hub][sensor.hub_drop_1_c0ffee_water_flow_rate-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.hub_drop_1_c0ffee_water_flow_rate',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': None,
    'original_icon': 'mdi:shower-head',
    'original_name': 'Water flow rate',
    'platform': 'drop_connect',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'current_flow_rate',
    'unique_id': 'DROP-1_C0FFEE_255_current_flow_rate',
    'unit_of_measurement': 'gpm',
  })
# ---
# name: test_sensors[hub][sensor.hub_drop_1_c0ffee_water_flow_rate-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Hub DROP-1_C0FFEE Water flow rate',
      'icon': 'mdi:shower-head',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'gpm',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hub_drop_1_c0ffee_water_flow_rate',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '5.77',
  })
# ---
# name: test_sensors[leak][sensor.leak_detector_battery-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.leak_detector_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.BATTERY: 'battery'>,
    'original_icon': None,
    'original_name': 'Battery',
    'platform': 'drop_connect',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'DROP-1_C0FFEE_20_battery',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensors[leak][sensor.leak_detector_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery',
      'friendly_name': 'Leak Detector Battery',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.leak_detector_battery',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '100',
  })
# ---
# name: test_sensors[leak][sensor.leak_detector_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.leak_detector_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Temperature',
    'platform': 'drop_connect',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'DROP-1_C0FFEE_20_temperature',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_sensors[leak][sensor.leak_detector_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'Leak Detector Temperature',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.leak_detector_temperature',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '20.1111111111111',
  })
# ---
# name: test_sensors[protection_valve][sensor.protection_valve_battery-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.protection_valve_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.BATTERY: 'battery'>,
    'original_icon': None,
    'original_name': 'Battery',
    'platform': 'drop_connect',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'DROP-1_C0FFEE_78_battery',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensors[protection_valve][sensor.protection_valve_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery',
      'friendly_name': 'Protection Valve Battery',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.protection_valve_battery',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[protection_valve][sensor.protection_valve_current_water_pressure-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.protection_valve_current_water_pressure',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfPressure.KPA: 'kPa'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.PRESSURE: 'pressure'>,
    'original_icon': None,
    'original_name': 'Current water pressure',
    'platform': 'drop_connect',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'current_system_pressure',
    'unique_id': 'DROP-1_C0FFEE_78_current_system_pressure',
    'unit_of_measurement': <UnitOfPressure.KPA: 'kPa'>,
  })
# ---
# name: test_sensors[protection_valve][sensor.protection_valve_current_water_pressure-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'pressure',
      'friendly_name': 'Protection Valve Current water pressure',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPressure.KPA: 'kPa'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.protection_valve_current_water_pressure',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '422.6486041',
  })
# ---
# name: test_sensors[protection_valve][sensor.protection_valve_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.protection_valve_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Temperature',
    'platform': 'drop_connect',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'DROP-1_C0FFEE_78_temperature',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_sensors[protection_valve][sensor.protection_valve_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'Protection Valve Temperature',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.protection_valve_temperature',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '21.3888888888889',
  })
# ---
# name: test_sensors[protection_valve][sensor.protection_valve_water_flow_rate-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.protection_valve_water_flow_rate',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': None,
    'original_icon': 'mdi:shower-head',
    'original_name': 'Water flow rate',
    'platform': 'drop_connect',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'current_flow_rate',
    'unique_id': 'DROP-1_C0FFEE_78_current_flow_rate',
    'unit_of_measurement': 'gpm',
  })
# ---
# name: test_sensors[protection_valve][sensor.protection_valve_water_flow_rate-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Protection Valve Water flow rate',
      'icon': 'mdi:shower-head',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'gpm',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.protection_valve_water_flow_rate',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '7.1',
  })
# ---
# name: test_sensors[pump_controller][sensor.pump_controller_current_water_pressure-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.pump_controller_current_water_pressure',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfPressure.KPA: 'kPa'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.PRESSURE: 'pressure'>,
    'original_icon': None,
    'original_name': 'Current water pressure',
    'platform': 'drop_connect',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'current_system_pressure',
    'unique_id': 'DROP-1_C0FFEE_83_current_system_pressure',
    'unit_of_measurement': <UnitOfPressure.KPA: 'kPa'>,
  })
# ---
# name: test_sensors[pump_controller][sensor.pump_controller_current_water_pressure-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'pressure',
      'friendly_name': 'Pump Controller Current water pressure',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPressure.KPA: 'kPa'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.pump_controller_current_water_pressure',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '428.8538854',
  })
# ---
# name: test_sensors[pump_controller][sensor.pump_controller_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.pump_controller_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Temperature',
    'platform': 'drop_connect',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'DROP-1_C0FFEE_83_temperature',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_sensors[pump_controller][sensor.pump_controller_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'Pump Controller Temperature',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.pump_controller_temperature',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '20.4444444444444',
  })
# ---
# name: test_sensors[pump_controller][sensor.pump_controller_water_flow_rate-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.pump_controller_water_flow_rate',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': None,
    'original_icon': 'mdi:shower-head',
    'original_name': 'Water flow rate',
    'platform': 'drop_connect',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'current_flow_rate',
    'unique_id': 'DROP-1_C0FFEE_83_current_flow_rate',
    'unit_of_measurement': 'gpm',
  })
# ---
# name: test_sensors[pump_controller][sensor.pump_controller_water_flow_rate-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Pump Controller Water flow rate',
      'icon': 'mdi:shower-head',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'gpm',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.pump_controller_water_flow_rate',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '2.2',
  })
# ---
# name: test_sensors[ro_filter][sensor.ro_filter_cartridge_1_life_remaining-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.ro_filter_cartridge_1_life_remaining',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': 'mdi:gauge',
    'original_name': 'Cartridge 1 life remaining',
    'platform': 'drop_connect',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'cart1',
    'unique_id': 'DROP-1_C0FFEE_255_cart1',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensors[ro_filter][sensor.ro_filter_cartridge_1_life_remaining-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'RO Filter Cartridge 1 life remaining',
      'icon': 'mdi:gauge',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ro_filter_cartridge_1_life_remaining',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '59',
  })
# ---
# name: test_sensors[ro_filter][sensor.ro_filter_cartridge_2_life_remaining-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.ro_filter_cartridge_2_life_remaining',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': 'mdi:gauge',
    'original_name': 'Cartridge 2 life remaining',
    'platform': 'drop_connect',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'cart2',
    'unique_id': 'DROP-1_C0FFEE_255_cart2',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensors[ro_filter][sensor.ro_filter_cartridge_2_life_remaining-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'RO Filter Cartridge 2 life remaining',
      'icon': 'mdi:gauge',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ro_filter_cartridge_2_life_remaining',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '80',
  })
# ---
# name: test_sensors[ro_filter][sensor.ro_filter_cartridge_3_life_remaining-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.ro_filter_cartridge_3_life_remaining',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': 'mdi:gauge',
    'original_name': 'Cartridge 3 life remaining',
    'platform': 'drop_connect',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'cart3',
    'unique_id': 'DROP-1_C0FFEE_255_cart3',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensors[ro_filter][sensor.ro_filter_cartridge_3_life_remaining-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'RO Filter Cartridge 3 life remaining',
      'icon': 'mdi:gauge',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ro_filter_cartridge_3_life_remaining',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '59',
  })
# ---
# name: test_sensors[ro_filter][sensor.ro_filter_inlet_tds-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.ro_filter_inlet_tds',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': 'mdi:water-opacity',
    'original_name': 'Inlet TDS',
    'platform': 'drop_connect',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'inlet_tds',
    'unique_id': 'DROP-1_C0FFEE_255_inlet_tds',
    'unit_of_measurement': 'ppm',
  })
# ---
# name: test_sensors[ro_filter][sensor.ro_filter_inlet_tds-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'RO Filter Inlet TDS',
      'icon': 'mdi:water-opacity',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'ppm',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ro_filter_inlet_tds',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '164',
  })
# ---
# name: test_sensors[ro_filter][sensor.ro_filter_outlet_tds-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.ro_filter_outlet_tds',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': 'mdi:water-opacity',
    'original_name': 'Outlet TDS',
    'platform': 'drop_connect',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'outlet_tds',
    'unique_id': 'DROP-1_C0FFEE_255_outlet_tds',
    'unit_of_measurement': 'ppm',
  })
# ---
# name: test_sensors[ro_filter][sensor.ro_filter_outlet_tds-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'RO Filter Outlet TDS',
      'icon': 'mdi:water-opacity',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'ppm',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ro_filter_outlet_tds',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '9',
  })
# ---
# name: test_sensors[softener][sensor.softener_battery-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.softener_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.BATTERY: 'battery'>,
    'original_icon': None,
    'original_name': 'Battery',
    'platform': 'drop_connect',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'DROP-1_C0FFEE_0_battery',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensors[softener][sensor.softener_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery',
      'friendly_name': 'Softener Battery',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.softener_battery',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '20',
  })
# ---
# name: test_sensors[softener][sensor.softener_capacity_remaining-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.softener_capacity_remaining',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.WATER: 'water'>,
    'original_icon': None,
    'original_name': 'Capacity remaining',
    'platform': 'drop_connect',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'capacity_remaining',
    'unique_id': 'DROP-1_C0FFEE_0_capacity_remaining',
    'unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
  })
# ---
# name: test_sensors[softener][sensor.softener_capacity_remaining-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'water',
      'friendly_name': 'Softener Capacity remaining',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.softener_capacity_remaining',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '3785.411784',
  })
# ---
# name: test_sensors[softener][sensor.softener_current_water_pressure-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.softener_current_water_pressure',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfPressure.KPA: 'kPa'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.PRESSURE: 'pressure'>,
    'original_icon': None,
    'original_name': 'Current water pressure',
    'platform': 'drop_connect',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'current_system_pressure',
    'unique_id': 'DROP-1_C0FFEE_0_current_system_pressure',
    'unit_of_measurement': <UnitOfPressure.KPA: 'kPa'>,
  })
# ---
# name: test_sensors[softener][sensor.softener_current_water_pressure-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'pressure',
      'friendly_name': 'Softener Current water pressure',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPressure.KPA: 'kPa'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.softener_current_water_pressure',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '348.1852285',
  })
# ---
# name: test_sensors[softener][sensor.softener_water_flow_rate-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.softener_water_flow_rate',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': None,
    'original_icon': 'mdi:shower-head',
    'original_name': 'Water flow rate',
    'platform': 'drop_connect',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'current_flow_rate',
    'unique_id': 'DROP-1_C0FFEE_0_current_flow_rate',
    'unit_of_measurement': 'gpm',
  })
# ---
# name: test_sensors[softener][sensor.softener_water_flow_rate-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Softener Water flow rate',
      'icon': 'mdi:shower-head',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'gpm',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.softener_water_flow_rate',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '5.0',
  })
# ---
